src/antlr/TemplateParser.java
// Generated from C:/Users/HP/Desktop/JAVA PROJECT/htmlJinjaCompiler/src/antlr/TemplateParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOCTYPE=1, HTML_COMMENT=2, CDATA=3, STYLE_OPEN=4, JINJA_STMT_OPEN=5, JINJA_EXPR_OPEN=6, 
		JINJA_COMMENT=7, TAG_OPEN=8, WS=9, TEXT=10, UNEXPECTED_CHAR=11, TAG_NAME=12, 
		SLASH=13, EQUAL=14, DOUBLE_QUOTE_STRING=15, SINGLE_QUOTE_STRING=16, UNQUOTED_VALUE=17, 
		TAG_CLOSE=18, TAG_WS=19, STYLE_CLOSE=20, LBRACE=21, RBRACE=22, COLON=23, 
		SEMI=24, COMMA=25, DOT=26, HASH=27, STAR=28, LPAREN=29, RPAREN=30, LBRACKET=31, 
		RBRACKET=32, DOUBLE_COLON=33, TILDE_EQUAL=34, PIPE_EQUAL=35, CARET_EQUAL=36, 
		DOLLAR_EQUAL=37, STAR_EQUAL=38, DECIMAL=39, NUMBER=40, UNIT=41, COLOR_HEX=42, 
		STYLE_IDENT=43, STYLE_STRING=44, URL=45, STYLE_WS=46, STYLE_OTHER=47, 
		JINJA_STMT_CLOSE=48, JINJA_IF=49, JINJA_ELSE=50, JINJA_ELIF=51, JINJA_ENDIF=52, 
		JINJA_FOR=53, JINJA_ENDFOR=54, JINJA_BLOCK=55, JINJA_ENDBLOCK=56, JINJA_MACRO=57, 
		JINJA_ENDMACRO=58, JINJA_SET=59, JINJA_INCLUDE=60, JINJA_EXTENDS=61, JINJA_IMPORT=62, 
		JINJA_EQ=63, JINJA_NE=64, JINJA_GE=65, JINJA_LE=66, JINJA_AND=67, JINJA_OR=68, 
		JINJA_NOT=69, JINJA_IN=70, JINJA_IDENT=71, JINJA_STRING=72, JINJA_NUMBER=73, 
		JINJA_OPERATOR=74, JINJA_PUNCT=75, JINJA_WS=76, JINJA_EXPR_CLOSE=77, JINJA_EXPR_EQ=78, 
		JINJA_EXPR_NE=79, JINJA_EXPR_GT=80, JINJA_EXPR_LT=81, JINJA_EXPR_GE=82, 
		JINJA_EXPR_LE=83, JINJA_EXPR_AND=84, JINJA_EXPR_OR=85, JINJA_EXPR_NOT=86, 
		JINJA_EXPR_IN=87, JINJA_EXPR_IDENT=88, JINJA_EXPR_NUMBER=89, JINJA_EXPR_STRING=90, 
		JINJA_EXPR_OPERATOR=91, JINJA_EXPR_PUNCT=92, JINJA_EXPR_WS=93;
	public static final int
		RULE_page = 0, RULE_content = 1, RULE_node = 2, RULE_textContent = 3, 
		RULE_htmlDocument = 4, RULE_doctype = 5, RULE_htmlElement = 6, RULE_openingTag = 7, 
		RULE_closingTag = 8, RULE_selfClosingTag = 9, RULE_attribute = 10, RULE_attributeValue = 11, 
		RULE_styleBlock = 12, RULE_styleRule = 13, RULE_selectorList = 14, RULE_selector = 15, 
		RULE_selectorPart = 16, RULE_attributeSelector = 17, RULE_declarationList = 18, 
		RULE_declaration = 19, RULE_declarationValue = 20, RULE_styleValuePart = 21, 
		RULE_numericValueType = 22, RULE_functionCall = 23, RULE_valueList = 24, 
		RULE_jinjaExpr = 25, RULE_jinjaExpressionBody = 26, RULE_jinjaBlock = 27, 
		RULE_jinjaSimple = 28, RULE_jinjaSimpleBody = 29, RULE_jinjaContainer = 30, 
		RULE_jinjaStatementBody = 31, RULE_jinjaContainerStart = 32, RULE_jinjaContainerEnd = 33, 
		RULE_jinjaKeyword = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"page", "content", "node", "textContent", "htmlDocument", "doctype", 
			"htmlElement", "openingTag", "closingTag", "selfClosingTag", "attribute", 
			"attributeValue", "styleBlock", "styleRule", "selectorList", "selector", 
			"selectorPart", "attributeSelector", "declarationList", "declaration", 
			"declarationValue", "styleValuePart", "numericValueType", "functionCall", 
			"valueList", "jinjaExpr", "jinjaExpressionBody", "jinjaBlock", "jinjaSimple", 
			"jinjaSimpleBody", "jinjaContainer", "jinjaStatementBody", "jinjaContainerStart", 
			"jinjaContainerEnd", "jinjaKeyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'<style>'", "'{%'", "'{{'", null, null, null, 
			null, null, null, "'/'", "'='", null, null, null, null, null, "'</style>'", 
			"'{'", "'}'", "':'", "';'", "','", "'.'", "'#'", "'*'", "'('", "')'", 
			"'['", "']'", "'::'", "'~='", "'|='", "'^='", "'$='", "'*='", null, null, 
			null, null, null, null, null, null, null, "'%}'", "'if'", "'else'", "'elif'", 
			"'endif'", "'for'", "'endfor'", "'block'", "'endblock'", "'macro'", "'endmacro'", 
			"'set'", "'include'", "'extends'", "'import'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'}}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOCTYPE", "HTML_COMMENT", "CDATA", "STYLE_OPEN", "JINJA_STMT_OPEN", 
			"JINJA_EXPR_OPEN", "JINJA_COMMENT", "TAG_OPEN", "WS", "TEXT", "UNEXPECTED_CHAR", 
			"TAG_NAME", "SLASH", "EQUAL", "DOUBLE_QUOTE_STRING", "SINGLE_QUOTE_STRING", 
			"UNQUOTED_VALUE", "TAG_CLOSE", "TAG_WS", "STYLE_CLOSE", "LBRACE", "RBRACE", 
			"COLON", "SEMI", "COMMA", "DOT", "HASH", "STAR", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "DOUBLE_COLON", "TILDE_EQUAL", "PIPE_EQUAL", 
			"CARET_EQUAL", "DOLLAR_EQUAL", "STAR_EQUAL", "DECIMAL", "NUMBER", "UNIT", 
			"COLOR_HEX", "STYLE_IDENT", "STYLE_STRING", "URL", "STYLE_WS", "STYLE_OTHER", 
			"JINJA_STMT_CLOSE", "JINJA_IF", "JINJA_ELSE", "JINJA_ELIF", "JINJA_ENDIF", 
			"JINJA_FOR", "JINJA_ENDFOR", "JINJA_BLOCK", "JINJA_ENDBLOCK", "JINJA_MACRO", 
			"JINJA_ENDMACRO", "JINJA_SET", "JINJA_INCLUDE", "JINJA_EXTENDS", "JINJA_IMPORT", 
			"JINJA_EQ", "JINJA_NE", "JINJA_GE", "JINJA_LE", "JINJA_AND", "JINJA_OR", 
			"JINJA_NOT", "JINJA_IN", "JINJA_IDENT", "JINJA_STRING", "JINJA_NUMBER", 
			"JINJA_OPERATOR", "JINJA_PUNCT", "JINJA_WS", "JINJA_EXPR_CLOSE", "JINJA_EXPR_EQ", 
			"JINJA_EXPR_NE", "JINJA_EXPR_GT", "JINJA_EXPR_LT", "JINJA_EXPR_GE", "JINJA_EXPR_LE", 
			"JINJA_EXPR_AND", "JINJA_EXPR_OR", "JINJA_EXPR_NOT", "JINJA_EXPR_IN", 
			"JINJA_EXPR_IDENT", "JINJA_EXPR_NUMBER", "JINJA_EXPR_STRING", "JINJA_EXPR_OPERATOR", 
			"JINJA_EXPR_PUNCT", "JINJA_EXPR_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TemplateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    // HTML5 Void Elements (These cannot have content and should not be parsed as containers)
	    private boolean isVoidTag(String tagName) {
	        return tagName.equals("area") || tagName.equals("base") || tagName.equals("br")
	            || tagName.equals("col") || tagName.equals("embed") || tagName.equals("hr")
	            || tagName.equals("img") || tagName.equals("input") || tagName.equals("link")
	            || tagName.equals("meta") || tagName.equals("param") || tagName.equals("source")
	            || tagName.equals("track") || tagName.equals("wbr");
	    }

	public TemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PageContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TemplateParser.EOF, 0); }
		public DoctypeContext doctype() {
			return getRuleContext(DoctypeContext.class,0);
		}
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_page);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(70);
				doctype();
				}
				break;
			}
			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(73);
					content();
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			node();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeContext extends ParserRuleContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public JinjaExprContext jinjaExpr() {
			return getRuleContext(JinjaExprContext.class,0);
		}
		public StyleBlockContext styleBlock() {
			return getRuleContext(StyleBlockContext.class,0);
		}
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public SelfClosingTagContext selfClosingTag() {
			return getRuleContext(SelfClosingTagContext.class,0);
		}
		public TextContentContext textContent() {
			return getRuleContext(TextContentContext.class,0);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_node);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				jinjaBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				jinjaExpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				styleBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				htmlElement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				selfClosingTag();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				textContent();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextContentContext extends ParserRuleContext {
		public TextContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textContent; }
	 
		public TextContentContext() { }
		public void copyFrom(TextContentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TextContentNodeContext extends TextContentContext {
		public List<TerminalNode> TEXT() { return getTokens(TemplateParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(TemplateParser.TEXT, i);
		}
		public List<TerminalNode> WS() { return getTokens(TemplateParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TemplateParser.WS, i);
		}
		public TextContentNodeContext(TextContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterTextContentNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitTextContentNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitTextContentNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContentContext textContent() throws RecognitionException {
		TextContentContext _localctx = new TextContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_textContent);
		int _la;
		try {
			int _alt;
			_localctx = new TextContentNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(92); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(91);
					_la = _input.LA(1);
					if ( !(_la==WS || _la==TEXT) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(94); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlDocumentContext extends ParserRuleContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public DoctypeContext doctype() {
			return getRuleContext(DoctypeContext.class,0);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_htmlDocument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(96);
				doctype();
				}
				break;
			}
			setState(99);
			htmlElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeContext extends ParserRuleContext {
		public DoctypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doctype; }
	 
		public DoctypeContext() { }
		public void copyFrom(DoctypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeNodeContext extends DoctypeContext {
		public TerminalNode DOCTYPE() { return getToken(TemplateParser.DOCTYPE, 0); }
		public DoctypeNodeContext(DoctypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterDoctypeNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitDoctypeNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitDoctypeNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoctypeContext doctype() throws RecognitionException {
		DoctypeContext _localctx = new DoctypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_doctype);
		try {
			_localctx = new DoctypeNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(DOCTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
